# idx_file

./: .gitignore  Cargo.toml  README.md
src/: allocator.rs  lib.rs
