[package]
name = "idx_file"
version = "0.38.3"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "This is a library for handling single-dimensional array data. It uses mmap and avltriee."

repository = "https://github.com/OdenShirataki/idx_file"

keywords = ["index","file","avltree","memmap","data"]
categories = ["filesystem","algorithms"]
license = "MIT/Apache-2.0"

[dependencies]
avltriee = { version = "0.51" , path = "../avltriee" }
file_mmap = { version = "0.19" , path = "../file_mmap" }