[package]
name = "idx_file"
version = "0.55.0"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "This is a library for handling single-dimensional array data. It uses mmap and avltriee."

repository = "https://github.com/OdenShirataki/idx_file"

keywords = ["index", "file", "avltree", "memmap", "data"]
categories = ["filesystem", "algorithms"]
license = "MIT/Apache-2.0"

[dependencies]
avltriee = { version = "0.68.0" }
file_mmap = { version = "0.20.0" }

[dev-dependencies]
futures = "0.3.29"
